fix icon and link to all page

--- a/MainPage.html
+++ b/MainPage.html
@@ -42,7 +42,7 @@
       <button class="btn btn-primary" id="button-nav" type="button">
         <i class="fas fa-chart-bar"></i>&nbsp; &nbsp; &nbsp;รายงานผล</button>
       <button class="btn btn-primary" id="button-nav" type="button">
-        <i class="icon ion-android-contact"></i>&nbsp; &nbsp; &nbsp; ผู้ดูแล</button>
+        <i class="fas fa-users"></i>&nbsp; &nbsp; &nbsp; ผู้ดูแล</button>
       <button class="btn btn-primary" id="button-nav" type="button">
         <i class="fas fa-leaf"></i>&nbsp; &nbsp; จัดการพืช</button>
     </div>
@@ -67,7 +67,7 @@
         id="button-nav" type="button">
         <i class="fas fa-chart-bar"></i>&nbsp; &nbsp; &nbsp;รายงานผล</button><button class="btn btn-primary"
         id="button-nav" type="button">
-        <i class="icon ion-android-contact"></i>&nbsp; &nbsp; &nbsp; ผู้ดูแล</button><button class="btn btn-primary"
+        <i class="fas fa-users"></i>&nbsp; &nbsp; &nbsp; ผู้ดูแล</button><button class="btn btn-primary"
         id="button-nav" type="button">
         <i class="fas fa-leaf"></i>&nbsp; &nbsp; จัดการพืช
       </button>
