--- a/addland.html
+++ b/addland.html
@@ -211,6 +211,7 @@
   <!-- firebase -->
   <script src="../build/js/connectServer.js"></script>
   <script src="build/js/CalculatedMapArea.js"></script>
+  <script src="build/js/navBarLinks.js"></script>
 
   <!-- jQuery -->
   <script src="plugins/jquery/jquery.min.js"></script>
