--- a/landDetail.html
+++ b/landDetail.html
@@ -82,7 +82,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link active" id="navBarLand">
               <i class="fas fa-map-marked-alt"></i>
               <p>
                 &nbsp;&nbsp; ที่ดิน
@@ -90,7 +90,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarSchedule">
               <i class="fas fa-calendar-alt"></i>
               <p>
                 &nbsp;&nbsp;  ตารางงาน
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarActivity">
               <i class="fas fa-list-alt"></i>
               <p>
                 &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -106,7 +106,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarReport">
               <i class="fas fa-chart-bar"></i>
               <p>
                 &nbsp;&nbsp; รายงานผล
@@ -114,15 +114,15 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="fa fa-user"></i>
+            <a href="#" class="nav-link" id="navBarManager">
+              <i class="fas fa-users"></i>
               <p>
                 &nbsp;&nbsp;&nbsp;  ผู้ดูแล
               </p>
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarPlant">
               <i class="fas fa-leaf"></i>
               <p>
                 &nbsp;&nbsp; จัดการพืช
@@ -282,6 +282,7 @@
     <script src="build/js/connectServer.js"></script>
     <script src="build/js/CallWeather.js"></script>
     <script src="build/js/callLandDetailInfo.js"></script>
+    <script src="build/js/navBarLinks.js"></script>
 
   
 <!-- jQuery -->
