--- a/reportIndividual.html
+++ b/reportIndividual.html
@@ -81,7 +81,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarLand">
               <i class="fas fa-map-marked-alt"></i>
               <p>
                 &nbsp;&nbsp; ที่ดิน
@@ -89,7 +89,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarSchedule">
               <i class="fas fa-calendar-alt"></i>
               <p>
                 &nbsp;&nbsp;  ตารางงาน
@@ -97,7 +97,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarActivity">
               <i class="fas fa-list-alt"></i>
               <p>
                 &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarReport">
               <i class="fas fa-chart-bar"></i>
               <p>
                 &nbsp;&nbsp; รายงานผล
@@ -113,15 +113,15 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="fa fa-user"></i>
+            <a href="#" class="nav-link" id="navBarManager">
+              <i class="fas fa-users"></i>
               <p>
                 &nbsp;&nbsp;&nbsp;  ผู้ดูแล
               </p>
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarPlant">
               <i class="fas fa-leaf"></i>
               <p>
                 &nbsp;&nbsp; จัดการพืช
@@ -193,31 +193,35 @@
         <table class="reportTable" id ="activityTable">
           <tr>
             <td>
-              <p>กิจกรรม</p>
+              <p id = "showAllActivity"></p>
             </td>
+            <td class="text-secondary">
+              <p id = "showNotDoneActivity"></p>
+              </td>
+            <td class="text-warning">
+              <p id = "showInProgressActivity"></p>
+              </td>
+            <td class="text-success">
+              <p id = "showDoneActivity"></p>
+              </td>
+            <td class="text-danger">
+              <p id = "showLateActivity"></p>
+              </td>
+          </tr>
+          <tr>
             <td>
-              <p id = "showAllActivity">0</p>
-              <br>
               <a id = "allActivityLink">ทั้งหมด</a>
             </td>
             <td class="text-secondary">
-              <p id = "showNotDoneActivity">0</p>
-              <br>
               <a id = "notDoneActivityLink">ยังไม่เสร็จ</a>
             </td>
             <td class="text-warning">
-              <p id = "shoInProgressActivity">0</p>
-              <br>
               <a id = "inProgressActivityLink">กำลังดำเนินการ</a>
             </td>
             <td class="text-success">
-              <p id = "showDoneActivity">0</p>
-              <br>
               <a id = "doneActivityLink">เสร็จแล้ว</a>
             </td>
             <td class="text-danger">
-              <p id = "showLateActivity">0</p>
-              <br>
               <a id = "lateActivityLink">เลยกำหนด</a>
             </td>
           </tr>
@@ -244,7 +248,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
     async defer></script>
     <script src="build/js/connectServer.js"></script>
-
+    <script src="build/js/callLandDetailInfo.js"></script>
+    <script src="build/js/navBarLinks.js"></script>
 
   
 <!-- jQuery -->
