--- a/activities.html
+++ b/activities.html
@@ -73,7 +73,7 @@
             <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
             <li class="nav-item">
-              <a href="index.html" class="nav-link">
+              <a href="index.html" class="nav-link" id="navBarLand">
                 <i class="fas fa-map-marked-alt"></i>
                 <p>
                   &nbsp;&nbsp; ที่ดิน
@@ -81,7 +81,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="calendar.html" class="nav-link">
+              <a href="calendar.html" class="nav-link" id="navBarSchedule">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -89,7 +89,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link active">
+              <a href="#" class="nav-link active" id="navBarActivity">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link" id="navBarReport">
                 <i class="fas fa-chart-bar"></i>
                 <p>
                   &nbsp;&nbsp; รายงานผล
@@ -105,15 +105,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="icon ion-android-contact"></i>
+              <a href="#" class="nav-link" id="navBarManager">
+                <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
                 </p>
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link" id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -256,6 +256,7 @@
   <script src="build/js/connectServer.js"></script>
   <script src="build/js/activityBar.js"></script>
   <script src="build/js/activitiesFunc.js"></script>
+  <script src="build/js/navBarLinks.js"></script>
 
 
 
