--- a/addActivity.html
+++ b/addActivity.html
@@ -94,7 +94,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarLand">
               <i class="fas fa-map-marked-alt"></i>
               <p>
                 &nbsp;&nbsp; ที่ดิน
@@ -102,7 +102,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarSchedule"> 
               <i class="fas fa-calendar-alt"></i>
               <p>
                 &nbsp;&nbsp;  ตารางงาน
@@ -110,7 +110,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarActivity">
               <i class="fas fa-list-alt"></i>
               <p>
                 &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -118,7 +118,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarReport">
               <i class="fas fa-chart-bar"></i>
               <p>
                 &nbsp;&nbsp; รายงานผล
@@ -126,15 +126,15 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="fa fa-user"></i>
+            <a href="#" class="nav-link" id="navBarManager">
+              <i class="fas fa-users"></i>
               <p>
                 &nbsp;&nbsp;&nbsp;  ผู้ดูแล
               </p>
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" id="navBarPlant">
               <i class="fas fa-leaf"></i>
               <p>
                 &nbsp;&nbsp; จัดการพืช
@@ -242,6 +242,7 @@
     async defer></script>
     <script src="build/js/connectServer.js"></script>
     <script src="build/js/addActivity.js"></script>
+    <script src="build/js/navBarLinks.js"></script>
 
   
 <!-- jQuery -->
