--- a/calendar.html
+++ b/calendar.html
@@ -8,8 +8,8 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="build/css/allelements.css">
-  <link rel="stylesheet" href="build/css/calendarStyle.css">
+    <link rel="stylesheet" href="build/css/calendarStyle.css">
+
   <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="../dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
+  <link rel="stylesheet" href="build/css/allelements.css">
 </head>
 
 <body class="hold-transition sidebar-mini ">
@@ -72,7 +72,7 @@
             <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
             <li class="nav-item">
-              <a href="index.html" class="nav-link">
+              <a href="index.html" class="nav-link" id="navBarLand">
                 <i class="fas fa-map-marked-alt"></i>
                 <p>
                   &nbsp;&nbsp; ที่ดิน
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link  active" id="navBarSchedule">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="activities.html" class="nav-link active">
+              <a href="activities.html" class="nav-link" id="navBarActivity">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -96,7 +96,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link" id="navBarReport">
                 <i class="fas fa-chart-bar"></i>
                 <p>
                   &nbsp;&nbsp; รายงานผล
@@ -104,15 +104,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="icon ion-android-contact"></i>
+              <a href="#" class="nav-link" id="navBarManager">
+                <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
                 </p>
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link" id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -254,6 +254,7 @@
   <script src="build/js/connectServer.js"></script>
   <script src="build/js/activityBar.js"></script>
   <script src="build/js/calendarFunc.js"></script>
+  <script src="build/js/navBarLinks.js"></script>
 
 
 </body>
