--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
             <li class="nav-item">
-              <a href="#" class="nav-link active">
+              <a href="#" class="nav-link active" id="navBarLand">
                 <i class="fas fa-map-marked-alt"></i>
                 <p>
                   &nbsp;&nbsp; ที่ดิน
@@ -183,7 +183,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="calendar.html" class="nav-link">
+              <a  class="nav-link" id="navBarSchedule">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -191,7 +191,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="activities.html" class="nav-link">
+              <a  class="nav-link" id="navBarActivity">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -199,7 +199,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a class="nav-link" id="navBarReport">
                 <i class="fas fa-chart-bar"></i>
                 <p>
                   &nbsp;&nbsp; รายงานผล
@@ -207,15 +207,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="icon ion-android-contact"></i>
+              <a href="#" class="nav-link" id="navBarManager">
+                <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
                 </p>
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link" id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -314,12 +314,14 @@
     <!-- <script src="build/js/firebaseAuthen.js"></script> -->
     <!-- PROPLANTE -->
     <script src="build/js/connectServer.js"></script>
+    <script src="build/js/navBarLinks.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
       async defer></script>
     <script src="build/js/showLandMain.js"></script>
     <script src="build/js/mainPageFunc.js"></script>
     <script src="build/js/CalculatedMapArea.js"></script>
+
 
     <!-- PROPLANTE -->
 
