--- a/activities.html
+++ b/activities.html
@@ -33,8 +33,8 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <button id="bt-progress-nav" class="btn bg-olive" data-toggle="modal"
-            data-target="#modal-add-activity" onclick="getLandName()">เพิ่มกิจกรรม</button>
+          <button id="bt-progress-nav" class="btn bg-olive" data-toggle="modal" data-target="#modal-add-activity"
+            onclick="getLandName()">เพิ่มกิจกรรม</button>
         </li>
       </ul>
     </nav>
@@ -106,7 +106,7 @@
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="icon ion-android-contact"></i>
+                <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
                 </p>
@@ -153,20 +153,19 @@
               </td>
             </tr>
           </table>
-          <table class="table-header">
-            <tr>
-              <td>
+       
+            <div id="bar-header">
+              <div class="bar-col-header">
                 <h4 class="text-success">กิจกรรมทั้งหมด</h4>
-              </td>
-              <td class="tr-bt-add-ac">
+              </div>
+              <div class="bar-col-header" style="text-align: right;">
                 <button id="bt-progress-container" class="btn bg-olive " onclick="getLandName()" data-toggle="modal"
                   data-target="#modal-add-activity">เพิ่มกิจกรรม</button>
-              </td>
-            </tr>
-          </table>
+              </div>
+            </div>
           <hr>
         </div><!-- /.container-fluid -->
-      </section class="content-header">
+      </section>
 
       <!-- Main content -->
       <section class="content">
@@ -221,7 +220,7 @@
               --เลือกที่ดิน--
             </button>
             <div class="dropdown-menu" role="menu" id="land-dropdown">
-             </div>
+            </div>
           </div>
           <p style="color:red; display: none" id="modal-error-text">*กรุณาเลือกที่ดิน</p>
           <center>
