--- a/calendar.html
+++ b/calendar.html
@@ -105,7 +105,7 @@
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="icon ion-android-contact"></i>
+                <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
                 </p>
