--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="icon ion-android-contact"></i>
+                <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
                 </p>
@@ -313,14 +313,12 @@
     <!-- AdminLTE for demo purposes -->
     <script src="dist/js/demo.js"></script>
 
-
+    <!-- PROPLANTE -->
     <!-- firebase -->
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
     <!-- firebase -->
-    <!-- <script src="build/js/firebaseAuthen.js"></script> -->
-    <!-- PROPLANTE -->
     <script src="build/js/connectServer.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
