--- a/activitydetails.html
+++ b/activitydetails.html
@@ -36,7 +36,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <button id="bt-progress-nav" class="btn bg-olive">ความก้าวหน้า</button>
+          <button id="activity-progress-btn" class="btn bg-olive bt-progressive-nav">ความก้าวหน้า</button>
         </li>
       </ul>
     </nav>
@@ -187,7 +187,7 @@
               </td>
 
               <td class="tr-bt-add-ac">
-                <button id="bt-progress-container" class="btn bg-olive">ความก้าวหน้า</button>
+                <button id="activity-progress-btn" class="btn bg-olive bt-custom-hrader">ความก้าวหน้า</button>
               </td>
             </tr>
 
@@ -223,10 +223,6 @@
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
     <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
