--- a/reportPerLand.html
+++ b/reportPerLand.html
@@ -37,7 +37,7 @@
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
-  <d class="wrapper">
+  <div class="wrapper">
 
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
@@ -55,21 +55,27 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="build/img/icon.png" alt="Proplante logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-bold">PROPLANTE</span>
+      <a id="sidebar-brand-logo" href="index.html" class="brand-link">
+        <table>
+          <tr>
+            <td>
+              <img src="build/img/icon.png" width="50px;" />
+            </td>
+            <td id="band-name">
+              &nbsp;&nbsp;PROPLANTE
+            </td>
+          </tr>
+        </table>
       </a>
-
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <!-- <div class="image">
-          <i ></i>
-        </div> -->
+            <i ></i>
+          </div> -->
           <div class="info">
-            <a href="#" class="d-block">ยินดีต้อนรับ !</a>
+            <p id="nav-user-name" href="#" class="d-block">ยินดีต้อนรับ </p>
           </div>
         </div>
 
@@ -169,20 +175,17 @@
     </div>
     <!-- /.content-wrapper -->
 
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
     <!-- /.control-sidebar -->
     </div>
     <!-- ./wrapper -->
 
     <!-- PROPLANTE -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
-      async defer></script>
-    <script src="build/js/connectServer.js"></script>
+   <!-- firebase -->
+   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+   <script src="https://apis.google.com/js/platform.js" async defer></script>
+   <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+   <!-- firebase -->
+   <script src="build/js/connectServer.js"></script>
     <script src="build/js/reportPerLand.js"></script>
     <script src="build/js/navBarLinks.js"></script>
 
@@ -223,10 +226,8 @@
     <script src="dist/js/pages/dashboard.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="dist/js/demo.js"></script>
-    <!-- firebase -->
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="build/js/firebaseAuthen.js"></script>
+
+
 
 
 
