--- a/calendar.html
+++ b/calendar.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Proplante | Calendar</title>
+  <title>Proplante | ตารางงาน</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -154,12 +154,7 @@
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <div class="container-fluid">
-          <div class="row mb-2">
-            <div class="col-sm-6" style="margin-left: 3vw; font-size:1.8rem">
-              <h4  class="text-success">ตารางงาน</h4>
-            </div>
-
-          </div>
+          <h4  class="text-success">ตารางงาน</h4>
         </div><!-- /.container-fluid -->
       </section>
 
