--- a/activities.html
+++ b/activities.html
@@ -26,7 +26,6 @@
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
       <!--  -->
       <!-- Left navbar links -->
-      <div id="nav-nav">
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
@@ -34,11 +33,11 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <button id="new-activity-btn" class="btn bg-olive bt-progressive-nav" data-toggle="modal" data-target="#modal-add-activity"
-            onclick="getLandName()">เพิ่มกิจกรรม</button>
+          <button id="new-activity-btn" class="btn bg-olive bt-progressive-nav" data-toggle="modal"
+            data-target="#modal-add-activity" onclick="getLandName()">เพิ่มกิจกรรม</button>
         </li>
       </ul>
-    </div>
+
     </nav>
     <!-- /.navbar -->
 
@@ -156,16 +155,16 @@
               </td>
             </tr>
           </table>
-       
-            <div id="bar-header">
-              <div class="bar-col-header">
-                <h4 class="text-success">กิจกรรมทั้งหมด</h4>
-              </div>
-              <div class="bar-col-header" style="text-align: right;">
-                <button id="new-activity-btn" class="btn bg-olive bt-custom-hrader" onclick="getLandName()" data-toggle="modal"
-                  data-target="#modal-add-activity">เพิ่มกิจกรรม</button>
-              </div>
+
+          <div id="bar-header">
+            <div class="bar-col-header">
+              <h4 class="text-success">กิจกรรมทั้งหมด</h4>
             </div>
+            <div class="bar-col-header" style="text-align: right;">
+              <button id="new-activity-btn" class="btn bg-olive bt-custom-hrader" onclick="getLandName()"
+                data-toggle="modal" data-target="#modal-add-activity">เพิ่มกิจกรรม</button>
+            </div>
+          </div>
           <hr>
         </div><!-- /.container-fluid -->
       </section>
