--- a/addActivity.html
+++ b/addActivity.html
@@ -184,7 +184,7 @@
           
 
           <div class="form-group">
-                  <label>Date range:</label>
+                  <label>วันที่</label>
 
                   <div class="input-group">
                     <div class="input-group-prepend">
