--- a/calendar.html
+++ b/calendar.html
@@ -154,7 +154,20 @@
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <div class="container-fluid">
-          <h4  class="text-success">ตารางงาน</h4>
+          <table id="header-mobile">
+            <tr class="text-success">
+              <td>
+                <h4 class="text-success">ตารางงาน</h4>
+              </td>
+            </tr>
+          </table>
+
+          <div id="bar-header">
+            <div class="bar-col-header">
+              <h4 class="text-success">ตารางงาน</h4>
+            </div>
+          </div>
+          <hr>
         </div><!-- /.container-fluid -->
       </section>
 
