--- a/login.html
+++ b/login.html
@@ -170,11 +170,17 @@
   </div>
   <!-- /.login-box -->
 
-  <div id="bg-loading">
-    <div class="loader-wrapper" id="loader-1">
-      <div id="loader"></div>
+   <!--! LOADING MODAL -->
+   <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+    <div class="modal-dialog" style="margin-top:50vh ;">
+      <div id="bg-loading" style="display:block;width:100%; height:100%">
+        <div class="loader-wrapper" id="loader-1">
+          <div id="loader"></div>
+        </div>
+      </div>
     </div>
   </div>
+  <!--! LOADING MODAL -->
 
   <!-- jQuery -->
   <script src="../../plugins/jquery/jquery.min.js"></script>
