--- a/activitydetails.html
+++ b/activitydetails.html
@@ -17,6 +17,7 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <!-- PROPLANTE -->
+  <link rel="stylesheet" href="build/css/addActivityPage.css">
   <link rel="stylesheet" href="build/css/activitiesStyle.css">
   <link rel="stylesheet" href="build/css/loader-1.css">
   <link rel="stylesheet" href="build/css/allelements.css">
@@ -36,7 +37,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <button id="activity-progress-btn" class="btn bg-olive bt-progressive-nav">ความก้าวหน้า</button>
+          <button id="activity-progress-btn" class="btn bg-olive bt-progressive-nav" onclick="toUpdateProgress()">ความก้าวหน้า</button>
         </li>
       </ul>
     </nav>
@@ -157,41 +158,41 @@
                   <i class="fa fa-arrow-left"></i>
                   &nbsp;&nbsp;
                 </a>
-
               </td>
               <td>
                 <h4 class="h4-header" id="land-header-mobile"></h4>
               </td>
             </tr>
           </table>
-          <table class="table-header">
-            <tr class="text-success">
-              <td>
-                <table>
-                  <tr>
-                    <td>
-                      <a href="activities.html" class="text-success">
-                        <h4 class="h4-header">กิจกรรมทั้งหมด</h4>
-                      </a>
-                    </td>
-                    <td>
-                      &nbsp;&nbsp;
-                      <i class="fa fa-angle-right"></i>
-                      &nbsp;&nbsp;
-                    </td>
-                    <td>
-                      <h4 class="h4-header" id="land-header"></h4>
-                    </td>
-                  </tr>
-                </table>
-              </td>
+          <div id="bar-header">
+            <table class="table-header">
+              <tr class="text-success">
+                <td>
+                  <table>
+                    <tr>
+                      <td>
+                        <a href="activities.html" class="text-success">
+                          <h4 class="h4-header">กิจกรรมทั้งหมด</h4>
+                        </a>
+                      </td>
+                      <td>
+                        &nbsp;&nbsp;
+                        <i class="fa fa-angle-right"></i>
+                        &nbsp;&nbsp;
+                      </td>
+                      <td>
+                        <h4 class="h4-header" id="land-header"></h4>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+                <td class="tr-bt-add-ac">
+                  <button id="activity-progress-btn" class="btn bg-olive bt-custom-hrader" onclick="toUpdateProgress()">ความก้าวหน้า</button>
+                </td>
+              </tr>
+            </table>
+          </div>
 
-              <td class="tr-bt-add-ac">
-                <button id="activity-progress-btn" class="btn bg-olive bt-custom-hrader">ความก้าวหน้า</button>
-              </td>
-            </tr>
-
-          </table>
           <hr>
         </div><!-- /.container-fluid -->
       </section>
@@ -219,6 +220,7 @@
           </div>
           <!-- /.row -->
         </div><!-- /.container-fluid -->
+        
       </section>
       <!-- /.content -->
     </div>
@@ -227,11 +229,27 @@
   </div>
   <!-- ./wrapper -->
 
-  <div id="bg-loading">
-    <div class="loader-wrapper" id="loader-1">
-      <div id="loader"></div>
+  <div class="modal" id="modalImage" data-keyboard="false" data-backdrop="static"
+    style="display: none; top:0; background: rgba(255, 255, 255, 0.74)" aria-hidden="true">
+    <div class="modal-dialog" style="margin-top:5rem; max-width: unset;">
+      <img class="modal-content" id="img01">
+      <div id="caption"></div>
     </div>
   </div>
+
+
+  <!--! LOADING MODAL -->
+  <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static"
+    style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+    <div class="modal-dialog" style="margin-top:50vh ;">
+      <div id="bg-loading" style="display:block;width:100%; height:100%">
+        <div class="loader-wrapper" id="loader-1">
+          <div id="loader"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--! LOADING MODAL -->
   <!-- jQuery -->
   <script src="../plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap -->
